--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="/.Imagens/logo.jpg" alt="Logo Alura">
+        <img class="logo" src="/..Imagens/logo.jpg" alt="Logo Alura">
     </header>  
-
-    <main>
-
-        <section>
-            <textarea class="text-area" cols="41" rows="4" placeholder="Digite seu texto"></textarea>
+" cols="41" rows="4" placeholder="Digite seu texto"></textarea>
     
             <div class="informacao">
                 <h6>* Apenas letras minúsculas e sem acento</h62>
             </div>
+    <main>
+
+        <section>
+            <textarea class="text-area
     
             <div class="botoes">
                 <button class="btn-encriptar" onclick="btnEncriptar()">Criptografar</button>
