--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="/Imagens/logo.jpg" alt="Logo Alura">
+        <img class="logo" src="./Imagens/logo.jpg" alt="Logo Alura">
     </header>  
 
     <main>
