--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="./Imagens/logo.jpg" alt="Logo Alura">
+        <img class="logo" src="/Imagens/logo.jpg" alt="Logo Alura">
     </header>  
 
     <main>
@@ -29,10 +29,13 @@
         </section>
     
         <section>
-            <textarea class="mensagem" cols="20" rows="10"></textarea>
-            <button class="btn-copiar" onclick="bntCopiar()">Copiar</button>
+            <div>
+                <textarea class="mensagem" cols="20" rows="10"></textarea>
+            </div>
+            <div>
+                <button class="btn-copiar" onclick="bntCopiar()">Copiar</button>
+            </div>
         </section>
-
         
     </main>    
 
