--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
         </section>
     
         <section>
-            <div>
-                <textarea class="mensagem" cols="20" rows="10"></textarea>
-            </div>
-            <div>
-                <button class="btn-copiar" onclick="bntCopiar()">Copiar</button>
-            </div>
+          <div>
+            <textarea class="mensagem" id="texto" type="text" cols="20" rows="10"></textarea>
+          </div>
+          <div>
+            <button class="btn-copiar" onclick="copiar()">Copiar</button>
+          </div>
         </section>
+
         
     </main>    
 
