--- a/index.html
+++ b/index.html
@@ -42,5 +42,11 @@
 
     <script src="script.js"></script>
 
+    <footer>
+        <img src="">
+
+        <p class="copyright">&copy; Geilson Ferreira de Holanda - 2023</p>
+      </footer>
+
 </body>
 </html>
